--- a/produtos.html
+++ b/produtos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="produtos.css" />
-    <title>Produtos -barbearia alura</title>
+    <title>Produtos - barbearia alura</title>
   </head>
   <body>
     <header>
@@ -24,6 +24,48 @@
         </ul>
       </nav>
     </header>
+
+    <main>
+      <div>
+        <ul>
+          <li>
+            <div>
+              <a href="#">
+                <h2>Cabelo</h2>
+                <img src="imagens/cabelo.jpg" alt="imagem de um cabelo" />
+              </a>
+              <p class="descricao">
+                Na tesoura ou máquina, como o cliente preferir
+              </p>
+              <p class="moeda">R$ 25,00</p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <a href="#">
+                <h2>Barba</h2>
+                <img src="imagens/barba.jpg" alt="imagem de uma barba" />
+              </a>
+              <p class="descricao">Corte e desenho profissional de barba</p>
+              <p class="moeda">R$ 18,00</p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <a href="#">
+                <h2>Cabelo+barba</h2>
+                <img
+                  src="imagens/cabelo+barba.jpg"
+                  alt="imagem de um cabelo e barba"
+                />
+              </a>
+              <p class="descricao">Pacote completo de cabelo e barba</p>
+              <p class="moeda">R$ 35,00</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </main>
 
     <footer></footer>
   </body>
