--- a/produtos.html
+++ b/produtos.html
@@ -67,6 +67,9 @@
       </div>
     </main>
 
-    <footer></footer>
+    <footer>
+      <img src="./imagens/logo-branco.png" alt="" />
+      <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+    </footer>
   </body>
 </html>
